--- a/Atividade_01/index.html
+++ b/Atividade_01/index.html
@@ -4,16 +4,14 @@
 	<title>Atividade 01</title>
 	<meta charset="utf-8">
 
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
-	  <!-- Compiled and minified CSS -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/css/materialize.min.css">
+		<!-- MATERIALIZE -->
+		<link rel="stylesheet" href="../materialize/css/materialize.min.css">
+		<script src="../materialize/js/materialize.min.js"></script>
 
-    <!-- Compiled and minified JavaScript -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.5/js/materialize.min.js"></script>
-
-
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+		<link rel="stylesheet" href="css/style.css">
 
 	<script type="text/javascript">
 		$(document).ready(function() {
@@ -21,30 +19,20 @@
 		  });
 	</script>
 
-	<style type="text/css">
-		[type="checkbox"]+span:not(.lever) {
-			padding-left: 22px !important;
-		}
-		[type="radio"]:not(:checked)+span, [type="radio"]:checked+span {
-			padding-left: 22px !important;
-		}
-		.myClass {
-			margin-right: 20px;
-		}
-	</style>
-
-
 </head>
 <body>
 
 	<nav class=" indigo darken-3" >
 	    <div class="nav-wrapper container">
-	      <a href="#" class="brand-logo">Formulário de Cadastro</a>
+				<span class="brand-logo">Formulário de Cadastro</span>
+				<ul class="right hide-on-med-and-down">
+					<li><span>Atividade 01</span></li>
+				</ul>
 	    </div>
 	  </nav>
 
 	<div class="container">
-		<div class="row" style="margin-top: 25px;">
+		<div style="padding-top: 80px;" class="row">
 			<div class="input-field col s6">
 				<input id="user" type="text">
 				<label for="last_name">Usuário</label>
@@ -64,7 +52,7 @@
 
 		<div class="row">
 			<p>
-				<span style="margin-right: 20px;">Estado Civil: </span>
+				<span class="recuo">Estado Civil: </span>
 			    <label class="myClass">
 			      <input class="with-gap" name="group3" type="radio" />
 			      <span>Solteiro</span>
@@ -77,10 +65,10 @@
 
 			  </p>
 		</div>
-		
+
 		<div class="row">
 			<p>
-				<span style="margin-right: 20px;">Área de interesse: </span>
+				<span class="recuo">Área de interesse: </span>
 		      <label class="myClass">
 		        <input id="indeterminate-checkbox" type="checkbox" />
 		        <span>Computação</span>
@@ -107,16 +95,16 @@
 		      </label>
 		    </p>
 		</div>
-		
+
 		<div class="row">
 			 <div class="input-field col s12">
 			    <select>
-			      <option value="" disabled selected>Selecione a UF</option>
+			      <option value="" disabled selected>Selecione</option>
 			      <option value="1">Paraná</option>
 			      <option value="2">Santa Catarina</option>
 			      <option value="3">Rio Grande do Sul</option>
 			    </select>
-			    <label>Materialize Select</label>
+			    <label>UF</label>
 			</div>
 		</div>
 
